style/style.css
:root {
  --main-font: sans-serif;
  --text-size: 18px;

  --border: 5px;

  --bg-page: #BBABAE;
  --bg-main: #D3C7CB;
  --bg-input: #E8E4E7;

  --accent-brown: #5C534A;
  --text-white: #E8E4E7;
}

body {
  background-color: var(--bg-page);
  font-family: var(--main-font);
  font-size: var(--text-size);
}

.main {
  display: flex;
  gap: 30px;
  flex-direction: column;
  max-width: 500px;
  min-height: 90vh;
  margin: 50px auto;
  padding-top: 20px;
  padding-bottom: 20px;
  border-radius: var(--border);
  background: var(--bg-main);

}

.h1 {
  text-align: center;
  color: var(--text-white);
  font-size: 55px;
  font-family: var(--main-font);
}

.wrapper {
  display: flex;
  justify-content: center;
}

input {
  height: 32px;
  width: 300px;
  padding-left: 5px;
  border-radius: 5px 0 0 5px;
  font-size: var(--text-size);
  font-family: var(--main-font);
  color: var(--bg-main);
  background-color: var(--bg-input);
}

input::placeholder {
  font-size: var(--text-size);
  font-family: var(--main-font);
}

.add-btn {
  padding: 5px;
  border-radius: 0 5px 5px 0;
  font-size: var(--text-size);
  font-family: var(--main-font);
  color: var(--text-white);
  background-color: var(--accent-brown);
  transition: 0.2s;
}

.add-btn:hover {
  color: var(--bg-main);
  background-color: var(--bg-input);
}

.filter-buttons {
  display: flex;
  width: 99%;
  margin: 0 auto;
}

.filter-buttons button {
  flex: 1;
  font-family: var(--main-font);
  font-size: 15px;
  color: var(--bg-main);
  background-color: var(--accent-brown);
  transition: 0.2s;
}

.filter-buttons button:hover {
  color: var(--bg-main);
  background-color: var(--bg-input);
}

.filter-buttons button.active {
  color: var(--bg-main);
  background-color: var(--bg-input);
}

ul {
  display: flex;
  flex-direction: column;
  gap: 15px;
  padding-left: 50px;
}

li {
  display: flex;
  flex-direction: row;
  /* gap: 5px; */
  max-width: 400px;
  white-space: normal;
  font-size: var(--text-size);
  font-family: var(--main-font);
  align-items: start;
  color: var(--accent-brown);
}

.task-text {
  flex: 1;
  min-width: 0;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

li button {
  transition: 0.2s;
}

li button:hover {
  color: var(--bg-main);
  background-color: var(--text-white);
}

.done {
  text-decoration: line-through;
  opacity: 0.5;
}

.remove-btn {
  padding-left: 3px;
  padding-right: 3px;
  border-radius: 5px 0 0 5px;
  font-size: var(--text-size);
  font-family: var(--main-font);
  color: var(--text-white);
  background-color: var(--bg-page);
}

.done-btn {
  padding-left: 3px;
  padding-right: 3px;
  border-radius: 0 5px 5px 0;
  font-size: var(--text-size);
  font-family: var(--main-font);
  color: var(--text-white);
  background-color: var(--bg-page);
}

@media (max-width: 768px) {
  .main {
    width: 90%;
    margin: 30px auto;
  }

  .h1 {
    font-size: 50px;
  }

  input {
    width: 70%;
  }

  li {
    max-width: 90%;
  }

}

